--- a/dashboard.html
+++ b/dashboard.html
@@ -14,6 +14,12 @@
     <!--NORMALIZE -->
     <link rel="stylesheet" href="styles/normalize.css" />
 
+    <!-- Font awesome -->
+    <script
+      src="https://kit.fontawesome.com/54c63f95c5.js"
+      crossorigin="anonymous"
+    ></script>
+
     <!--CSS-->
     <link rel="stylesheet" href="styles/main.css" />
 
@@ -84,19 +90,20 @@
       </div>
       <ul class="sidebar-menu">
         <li>
-          <a href="index.html"><span class="icon">🏠</span> Pattern Library</a>
+          <a href="index.html"><i class="fa-solid fa-house icon-menu"></i> </a>
+        </li>
+
+        <li>
+          <a href="#"><i class="fa-solid fa-download icon-menu"></i> </a>
         </li>
         <li>
-          <a href="#"><span class="icon">📊</span> Analytics</a>
+          <a href="#"> <i class="fa-solid fa-gear icon-menu"></i></a>
         </li>
         <li>
-          <a href="#"><span class="icon">📁</span> Files</a>
-        </li>
-        <li>
-          <a href="#"><span class="icon">⚙️</span> Settings</a>
+          <a href="#"> <i class="fa-solid fa-database icon-menu"></i></a>
         </li>
       </ul>
-      <div class="sidebar-footer">
+      <!-- <div class="sidebar-footer">
         <p>&copy; 2024 Can Jet</p>
         <p>Made with 💗 By: &nbsp;</p>
         <div class="group">
@@ -106,7 +113,7 @@
           <small>Andres Sanchez</small>
           <small>Ramses Verdayes</small>
         </div>
-      </div>
+      </div> -->
     </div>
     <main class="main-content" id="main-content">
       <!-- * ------------------- Dashboard section ------------------- -->
