Showing last charts

--- a/dashboard.html
+++ b/dashboard.html
@@ -152,6 +152,7 @@
             Chart 4: Relationship of Total Delay minutes and Departure/arrival
             time convenient satisfactory.
           </p>
+          <div class="plot-chart"></div>
           <!-- the actual graph for chart 4 -->
         </div>
         <!-- ^ Chart box 5 -->
@@ -160,6 +161,7 @@
             Chart 5: Average Satisfaction rate by Seat Class.
           </p>
           <!-- the actual graph for chart 5 -->
+          <div class="bar-chart-small"></div>
         </div>
         <!-- ^ Chart box 6 -->
         <div class="dashboard-row">
@@ -167,6 +169,7 @@
             Chart 6: The first 15 Disloyal Customers’ 4(or less) Ticket Prices.
           </p>
           <!-- the actual graph for chart 6 -->
+          <div class="stacked-chart"></div>
         </div>
         <!-- ^ Chart box 7 -->
         <div class="dashboard-row">
