Adding styles & animations

--- a/dashboard.html
+++ b/dashboard.html
@@ -152,9 +152,19 @@
             Chart 4: Relationship of Total Delay minutes and Departure/arrival
             time convenient satisfactory.
           </p>
+
+          <div class="chart-4-controls">
+            <label for="color-dropdown">Color: </label>
+            <select id="color-dropdown">
+              <option value="#4d52ff">Blue</option>
+              <option value="#ff4d52">Red</option>
+              <option value="#5bc0de">Clear</option>
+            </select>
+          </div>
+          <!-- El gráfico real -->
           <div class="plot-chart"></div>
-          <!-- the actual graph for chart 4 -->
         </div>
+
         <!-- ^ Chart box 5 -->
         <div class="dashboard-row">
           <p class="chart-title">
