--- a/dashboard.html
+++ b/dashboard.html
@@ -103,17 +103,9 @@
           <a href="#"> <i class="fa-solid fa-database icon-menu"></i></a>
         </li>
       </ul>
-      <!-- <div class="sidebar-footer">
+      <div class="sidebar-footer">
         <p>&copy; 2024 Can Jet</p>
-        <p>Made with 💗 By: &nbsp;</p>
-        <div class="group">
-          <small>Luis Guaiquirian</small>
-          <small>Edgar Gomez</small>
-          <small>Jose Prado</small>
-          <small>Andres Sanchez</small>
-          <small>Ramses Verdayes</small>
-        </div>
-      </div> -->
+      </div>
     </div>
     <main class="main-content" id="main-content">
       <!-- * ------------------- Dashboard section ------------------- -->
