More changes for dashboard

--- a/dashboard.html
+++ b/dashboard.html
@@ -77,7 +77,7 @@
         class="logo"
       />
       <div class="hamburger-menu" id="hamburger-menu">
-        <span></span> <span></span> <span></span>
+        <i class="fa-solid fa-bars"></i>
       </div>
     </div>
     <div class="sidebar" id="sidebar">
