--- a/index.html
+++ b/index.html
@@ -96,7 +96,9 @@
           </ul>
         </nav>
         <!-- Botón de menú hamburguesa -->
-        <div class="menu-toggle" id="mobile-menu">&#9776;</div>
+        <div class="menu-toggle" id="mobile-menu">
+          <i class="fa-solid fa-bars"></i>
+        </div>
         <!-- Menú móvil -->
         <div class="mobile-nav">
           <ul>
