Adding double chart

--- a/dashboard.html
+++ b/dashboard.html
@@ -121,15 +121,25 @@
           <div class="line-chart"></div>
         </div>
         <!-- ^ Chart box 2 -->
-        <div class="dashboard-row">
-          <p class="chart-title">
-            Chart 2: Proportion of Customer Satisfaction.
-          </p>
-          <!-- the actual graph for chart 2 -->
-          <div class="pie-chart"></div>
-          <div class="legend-container"></div>
-          <!-- Contenedor para la leyenda -->
+        <!-- & -->
+        <!-- ^ Chart box 7 -->
+        <div class="dashboard-row-double">
+          <div class="dashboard-row">
+            <p class="chart-title">
+              Chart 2: Proportion of Customer Satisfaction.
+            </p>
+            <!-- the actual graph for chart 2 -->
+            <div class="pie-chart"></div>
+            <div class="legend-container"></div>
+            <!-- Contenedor para la leyenda -->
+          </div>
+          <div class="dashboard-row">
+            <p class="chart-title">Chart 7: Number of Loyal customers.</p>
+            <!-- the actual graph for chart 7 -->
+            <div class="donut-chart"></div>
+          </div>
         </div>
+
         <!-- ^ Chart box 3 -->
         <div class="dashboard-row">
           <p class="chart-title">
@@ -173,12 +183,7 @@
           <!-- the actual graph for chart 6 -->
           <div class="stacked-chart"></div>
         </div>
-        <!-- ^ Chart box 7 -->
-        <div class="dashboard-row">
-          <p class="chart-title">Chart 7: Number of Loyal customers.</p>
-          <!-- the actual graph for chart 7 -->
-          <div class="donut-chart"></div>
-        </div>
+
         <!-- ^ Chart box 8 -->
         <div class="dashboard-row">
           <p class="chart-title">Chart 8: Total number of flight distance.</p>
