Fixing hamburguer menu index

--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
     <!--NORMALIZE -->
     <link rel="stylesheet" href="styles/normalize.css" />
 
+    <!-- Font awesome -->
+    <script
+      src="https://kit.fontawesome.com/54c63f95c5.js"
+      crossorigin="anonymous"
+    ></script>
     <!--CSS-->
     <link rel="stylesheet" href="styles/main.css" />
 
@@ -471,7 +476,6 @@
               viewBox="0 0 750 400"
               preserveAspectRatio="xMinYMin meet"
             ></svg>
-            <div class="tooltip" id="tooltip"></div>
           </div>
 
           <!-------------------------- Line chart Stacked -->
