adding final video for hero section

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
     <main>
       <div class="hero">
         <video autoplay muted loop id="hero-video">
-          <source src="./assets/images/sky.mp4" type="video/mp4" />
+          <source src="./assets/images/optionTwo.mp4" type="video/mp4" />
           Your browser does not support the video tag.
         </video>
         <div class="hero-content">
