New dashboard layout

--- a/dashboard.html
+++ b/dashboard.html
@@ -167,21 +167,22 @@
           <div class="plot-chart"></div>
         </div>
 
-        <!-- ^ Chart box 5 -->
-        <div class="dashboard-row">
-          <p class="chart-title">
-            Chart 5: Average Satisfaction rate by Seat Class.
-          </p>
-          <!-- the actual graph for chart 5 -->
-          <div class="bar-chart-small"></div>
-        </div>
-        <!-- ^ Chart box 6 -->
-        <div class="dashboard-row">
-          <p class="chart-title">
-            Chart 6: The first 15 Disloyal Customers’ 4(or less) Ticket Prices.
-          </p>
-          <!-- the actual graph for chart 6 -->
-          <div class="stacked-chart"></div>
+        <div class="dashboard-row-double">
+          <div class="dashboard-row">
+            <p class="chart-title">
+              Chart 5: Average Satisfaction rate by Seat Class.
+            </p>
+            <!-- the actual graph for chart 5 -->
+            <div class="bar-chart-small"></div>
+          </div>
+          <div class="dashboard-row">
+            <p class="chart-title">
+              Chart 6: The first 15 Disloyal Customers’ 4(or less) Ticket
+              Prices.
+            </p>
+            <!-- the actual graph for chart 6 -->
+            <div class="stacked-chart"></div>
+          </div>
         </div>
 
         <!-- ^ Chart box 8 -->
